@@ -8,8 +8,6 @@
     :license: BSD, see LICENSE for details.
 #}
 {%- extends "basic/layout.html" %}
-{% set script_files = script_files + ['_static/theme_extras.js'] %}
-{% set css_files = css_files + ['_static/print.css'] %}
 
 {# do not display relbars #}
 {% block relbar1 %}{% endblock %}
