@@ -56,6 +56,9 @@ Bugs fixed
 * #1050: Add anonymous labels into ``objects.inv`` to be referenced via
   intersphinx.
 
+* #1095: Fix print-media stylesheet being included always in the "scrolls"
+  theme.
+
 Documentation
 -------------
 
